1-menu update commit

--- a/1. httpswww.relahq.comdemomak/index.html
+++ b/1. httpswww.relahq.comdemomak/index.html
@@ -607,41 +607,52 @@
                       <li
                         class="sticky-link sticky-link-overview sticky-link-overview first"
                       >
-                        <a class="section-overview">Overview</a>
+                        <a
+                          href="#property-content-wrap"
+                          class="section-overview"
+                          >Overview</a
+                        >
                       </li>
                       <li
                         class="sticky-link sticky-link-amenities sticky-link-amenities"
                       >
-                        <a class="section-amenities">Features</a>
+                        <a href="#feature-list" class="section-amenities"
+                          >Features</a
+                        >
                       </li>
-                      <li
+                      <!-- <li
                         class="sticky-link sticky-link-photos sticky-link-photos"
                       >
                         <a
+                          href="#photo_slide"
                           class="section-photos skrollable skrollable-between"
                           data="ps-open"
                           >Photos</a
                         >
-                      </li>
+                      </li> -->
                       <li
                         class="sticky-link sticky-link-videos sticky-link-videos"
                       >
-                        <a class="section-videos">Video</a>
+                        <a href="#showcase" class="section-videos">Video</a>
                       </li>
                       <li
                         class="sticky-link sticky-link-vtour sticky-link-vtour"
                       >
-                        <a class="section-vtour active">3D Tour</a>
+                        <a href="#showcase" class="section-vtour active"
+                          >3D Tour</a
+                        >
                       </li>
                       <li
                         class="sticky-link sticky-link-hotspot-floorplans sticky-link-hotspot-floorplans"
                       >
-                        <a class="section-hotspot-floorplans">Floor Plans</a>
+                        <a href="#showcase" class="section-hotspot-floorplans"
+                          >Floor Plans</a
+                        >
                       </li>
                       <li
                         class="sticky-link njmls-hide sticky-link njmls-hide-map sticky-link njmls-hide-map last"
                       >
-                        <a class="section-map">Map</a>
+                        <a href="#map" class="section-map">Map</a>
                       </li>
                     </ul>
                   </div>
@@ -791,22 +802,24 @@
                         <li
                           class="sticky-link sticky-link-videos sticky-link-videos"
                         >
-                          <a class="section-videos">Video</a>
+                          <a href="#showcase" class="section-videos">Video</a>
                         </li>
                         <li
                           class="sticky-link sticky-link-vtour sticky-link-vtour"
                         >
-                          <a class="section-vtour">3D Tour</a>
+                          <a href="#showcase" class="section-vtour">3D Tour</a>
                         </li>
                         <li
                           class="sticky-link sticky-link-hotspot-floorplans sticky-link-hotspot-floorplans"
                         >
-                          <a class="section-hotspot-floorplans">Floor Plans</a>
+                          <a href="#showcase" class="section-hotspot-floorplans"
+                            >Floor Plans</a
+                          >
                         </li>
                         <li
                           class="sticky-link njmls-hide sticky-link njmls-hide-map sticky-link njmls-hide-map"
                         >
-                          <a href="" class="section-map">Map</a>
+                          <a href="#map" class="section-map">Map</a>
                         </li>
                         <li
                           class="sticky-link mls-hide sticky-link mls-hide-contact sticky-link mls-hide-contact last"
@@ -2234,7 +2247,9 @@
                       </g>
                     </svg>
                   </div>
-                  <span class="hidden-xs hidden-sm">Video</span>
+                  <span id="video_slide" class="hidden-xs hidden-sm"
+                    >Video</span
+                  >
                 </a>
 
                 <a
