--- a/3. www.Jesse.Wallace.com/index.html
+++ b/3. www.Jesse.Wallace.com/index.html
@@ -298,7 +298,7 @@
       }
     </style>
 
-    <section class="u-backlink u-clearfix u-grey-80">
+    <!-- <section class="u-backlink u-clearfix u-grey-80">
       <a
         class="u-link"
         href="https://nicepage.com/website-design"
@@ -312,6 +312,6 @@
       <a class="u-link" href="" target="_blank">
         <span>Offline Website Builder Software</span> </a
       >.
-    </section>
+    </section> -->
   </body>
 </html>
